--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
-<!html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="view port"content="width device-width,initial-scale=1"> 
-        <title>bootstrap demo</title>
-        <style>
-            .col-md-4{
-                background -image:url(images/img.jpg);
-                background-position:center;
-                background-size:cover;
-                background-repeat:no-repeat;
-                height:200px;
-            }
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-compatible"content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial scale=1.0">
+        <title>parallax website</title>
+        <link rel="stylesheet" href="task.css"/>
+        </head>
+        <body>
+            <section class="ping1">
+                <div class="ptext">
+                    <span class="textBg">parallax website</span>
+                    </div>
+                    </section>
+                    <section class="section section-light">
+                        <h2>section one</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur ullam quam cum totam voluptatum, voluptatibus deserunt quasi eveniet perspiciatis soluta ut earum est impedit maiores. Et aliquid veritatis consequatur nemo.</p>
+                        <section class="pimg2">
+                            <div class="textBg">
+                                <span class="textBg">explore nature</span>
 
-        
+
+            </body>
+            </html>
+
+  
